--- a/DVLD/Properties/Resources.resx
+++ b/DVLD/Properties/Resources.resx
@@ -187,9 +187,6 @@
   <data name="release" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\release.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="DVLD_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\DVLD-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="international" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\international.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -198,5 +195,8 @@
   </data>
   <data name="person2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\person2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dvld_car_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dvld-car-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
